// Quiz System Database Schema
// For use with dbdiagram.io

Table quizzes {
  id uuid [pk, default: `gen_random_uuid()`]
  topic_id uuid [ref: > topics.id, not null]
  slug varchar(100) [not null]
  display_order integer [not null, default: 0]
  questions_count integer [not null, default: 10]
  time_limit_seconds integer
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (topic_id, slug) [unique]
  }
}

Table quiz_translations {
  quiz_id uuid [ref: > quizzes.id, not null]
  locale varchar(5) [not null]
  title varchar(200) [not null]
  description text

  indexes {
    (quiz_id, locale) [pk]
  }
}

Table quiz_questions {
  id uuid [pk, default: `gen_random_uuid()`]
  quiz_id uuid [ref: > quizzes.id, not null]
  display_order integer [not null]
  source_question_id uuid [ref: > questions.id]
  difficulty varchar(20) [default: 'medium']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (quiz_id, display_order)
  }
}

Table quiz_question_content {
  quiz_question_id uuid [ref: > quiz_questions.id, not null]
  locale varchar(5) [not null]
  question_text text [not null]
  explanation jsonb

  indexes {
    (quiz_question_id, locale) [pk]
  }
}

Table quiz_answers {
  id uuid [pk, default: `gen_random_uuid()`]
  quiz_question_id uuid [ref: > quiz_questions.id, not null]
  display_order integer [not null]
  is_correct boolean [not null, default: false]

  indexes {
    (quiz_question_id, display_order)
  }
}

Table quiz_answer_translations {
  quiz_answer_id uuid [ref: > quiz_answers.id, not null]
  locale varchar(5) [not null]
  answer_text text [not null]

  indexes {
    (quiz_answer_id, locale) [pk]
  }
}

Table quiz_attempts {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, not null]
  quiz_id uuid [ref: > quizzes.id, not null]
  score integer [not null]
  total_questions integer [not null]
  percentage decimal(5,2) [not null]
  time_spent_seconds integer
  integrity_score integer [default: 100]
  metadata jsonb [default: '{}']
  started_at timestamptz [not null, default: `now()`]
  completed_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, completed_at)
    (quiz_id, percentage, completed_at)
    (quiz_id, integrity_score)
  }
}

Table quiz_attempt_answers {
  id uuid [pk, default: `gen_random_uuid()`]
  attempt_id uuid [ref: > quiz_attempts.id, not null]
  quiz_question_id uuid [ref: > quiz_questions.id, not null]
  selected_answer_id uuid [ref: > quiz_answers.id]
  is_correct boolean [not null]
  answered_at timestamptz [not null, default: `now()`]

  indexes {
    (attempt_id)
  }
}

// Existing tables (for reference)
Table topics {
  id uuid [pk]
  slug varchar(100) [not null]
  display_order integer [not null]
  icon varchar(50)
}

Table topic_translations {
  topic_id uuid [ref: > topics.id, not null]
  locale varchar(5) [not null]
  title varchar(200) [not null]
  description text

  indexes {
    (topic_id, locale) [pk]
  }
}

Table questions {
  id uuid [pk]
  topic_id uuid [ref: > topics.id, not null]
  display_order integer [not null]
  difficulty varchar(20)
  category varchar(50)
}

Table question_content {
  question_id uuid [ref: > questions.id, not null]
  locale varchar(5) [not null]
  question jsonb [not null]
  answer jsonb [not null]

  indexes {
    (question_id, locale) [pk]
  }
}

Table users {
  id uuid [pk]
  email varchar(255) [not null, unique]
  name varchar(100)
  preferred_locale varchar(5) [default: 'en']
}

Table user_progress {
  user_id uuid [ref: > users.id, not null]
  question_id uuid [ref: > questions.id, not null]
  status varchar(20) [not null]
  times_viewed integer [default: 0]
  last_viewed_at timestamptz

  indexes {
    (user_id, question_id) [pk]
  }
}

Table user_bookmarks {
  user_id uuid [ref: > users.id, not null]
  question_id uuid [ref: > questions.id, not null]
  note text
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, question_id) [pk]
  }
}
